# garlic

./: .gitignore  README.rst  garlic.cabal  stack.yaml
app/: Main.hs
res/: about-dialog.ui  headerbar.ui  ingredient-editor.ui  ingredient-entry-edit.ui  ingredient-entry.ui  ingredient-mask.ui  ingredient-new.ui  log-add.ui  log-entry.ui  log-header.ui  main-window.ui  recipe-display.ui  recipe-edit.ui  recipe-entry.ui  style.css  usda.csv  view-recipes.ui  view-tracking.ui
sql/: usda.sql
src/: Garlic.hs
src/Data/: ListMap.hs
src/Garlic/: Model.hs  Presenter.hs  Types.hs  Util.hs  View.hs
src/Garlic/Data/: Duration.hs  Meal.hs  Nutrition.hs  Units.hs
src/Garlic/Model/: CSV.hs  EntryTag.hs  Queries.hs  Units.hs
src/Garlic/Presenter/: IngredientEditor.hs  Recipe.hs  RecipeDisplay.hs  RecipeEdit.hs  Tracking.hs
src/Garlic/Presenter/Recipe/: Display.hs  Edit.hs
src/Garlic/Presenter/Tracking/: FoodLog.hs  Goals.hs  Nutrition.hs  WeightLog.hs
src/Garlic/View/: Charts.hs  HeaderBar.hs  IngredientEditor.hs  Recipe.hs  RecipeDisplay.hs  RecipeEdit.hs  Tracking.hs
src/Garlic/View/Recipe/: Display.hs  Edit.hs
src/Garlic/View/Tracking/: FoodLog.hs  Goals.hs  Nutrition.hs  WeightLog.hs
src/Graphics/Rendering/Cairo/: GI.hs
src/Text/Markdown/: Persist.hs
