name:                garlic
version:             0.1.0.0
synopsis:            A recipe manager
description:         See README.rst
homepage:            https://github.com/githubuser/garlic#readme
license:             GPL-3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2017 Paul Ogris
category:            Desktop
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Garlic
                       Garlic.Model
                       Garlic.Types
                       Garlic.View
                       Garlic.Presenter
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , gi-gtk
                     , gi-gio
                     , reactive-banana
                     , reactive-banana-gi-gtk
                     , lens
  default-language:    Haskell2010

executable garlic-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , garlic
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tsahyt/garlic
