name:                garlic
version:             0.2.0.0
synopsis:            A recipe manager
description:         See README.rst
homepage:            https://github.com/githubuser/garlic#readme
license:             GPL-3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2017 Paul Ogris
category:            Desktop
build-type:          Simple
extra-source-files:  README.rst
                     res/headerbar.ui
                     res/main-window.ui
                     res/recipe-display.ui
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Garlic
                       Garlic.Model
                       Garlic.Model.CSV
                       Garlic.Model.Queries
                       Garlic.Data.Units
                       Garlic.Data.Nutrition
                       Garlic.Data.Duration
                       Garlic.Types
                       Garlic.View
                       Garlic.View.HeaderBar
                       Garlic.View.Recipe
                       Garlic.View.Recipe.Display
                       Garlic.View.Recipe.Edit
                       Garlic.View.IngredientEditor
                       Garlic.View.Tracking
                       Garlic.View.Tracking.Goals
                       Garlic.View.Tracking.WeightLog
                       Garlic.Presenter
                       Garlic.Presenter.Recipe
                       Garlic.Presenter.Recipe.Display
                       Garlic.Presenter.Recipe.Edit
                       Garlic.Presenter.Tracking
                       Garlic.Presenter.Tracking.Goals
                       Garlic.Presenter.IngredientEditor
                       Text.Markdown.Persist
                       Graphics.Rendering.Cairo.GI
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , gi-gtk
                     , gi-gio
                     , gi-webkit2
                     , gi-gtksource
                     , gi-cairo
                     , haskell-gi-base
                     , reactive-banana
                     , reactive-banana-gi-gtk
                     , lens
                     , file-embed
                     , time
                     , markdown
                     , blaze-html
                     , containers
                     , contravariant
                     , esqueleto
                     , linear
                     , profunctors
                     , attoparsec
                     , csv-conduit
                     , conduit
                     , conduit-extra
                     , filepath
                     , directory
                     , cairo
  default-language:    Haskell2010

executable garlic-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , garlic
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tsahyt/garlic
